# rab

./: .gitignore  Cargo.toml  README.md
rab-core/: Cargo.toml
rab-core/examples/: search.rs
rab-core/src/: armor_and_skills.rs  build_search.rs  lib.rs
src/: armor_and_skills.rs  armor_ron.rs  armor_ron_description.rs  build_search.rs  file.rs  locale.rs  main.rs  profile.rs  style_iced.rs  ui_iced.rs  update.rs
src/ui_iced/: builds_page.rs  common_elements.rs  details_page.rs  error_page.rs  lang_page.rs  main_page.rs  no_files_page.rs  settings_page.rs  talisman_page.rs
