[package]
name = "rab"
version = "0.3.3"
authors = ["ityt <imran.tierce@protonmail.com>"]
edition = "2018"
repository = "https://github.com/itytophile/rab"
description = "Rusty Armor Builds - Monster Hunter Rise Armor Set Creation Tool"
license = "GPL-3.0"
keywords = ["monster", "hunter", "rise", "armor", "search"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
ron = "0.6"
iced = { version = "0.3", features = ["svg", "tokio"] }
once_cell = "1.7"
lexical-sort = "0.3"
reqwest = "0.11"
iced_futures = "0.3"
rab-core = { version = "", path = "rab-core" }