[package]
name = "rab"
version = "0.5.0"
authors = ["ityt <imran.tierce@protonmail.com>"]
edition = "2021"
repository = "https://github.com/itytophile/rab"
description = "Rusty Armor Builds - Monster Hunter Rise Armor Set Creation Tool"
license = "GPL-3.0"
keywords = ["monster", "hunter", "rise", "armor", "search"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["rab-core"]

[dependencies]
serde = "1.0"
ron = "0.7"
iced = { version = "0.3", features = ["svg", "tokio"] }
once_cell = "1.9"
lexical-sort = "0.3"
reqwest = "0.11"
iced_futures = "0.3"
rab-core = { version = "0.4", path = "rab-core" }

[profile.release]
lto = true

