[package]
name = "rab"
version = "0.5.0"
authors = ["ityt <imran.tierce@protonmail.com>"]
edition = "2021"
repository = "https://github.com/itytophile/rab"
description = "Rusty Armor Builds - Monster Hunter Rise Armor Set Creation Tool"
license = "GPL-3.0"
keywords = ["monster", "hunter", "rise", "armor", "search"]

[dependencies]
serde = "1.0"
ron = "0.7"
iced = { version = "0.4", features = ["svg", "tokio", "pure"] }
once_cell = "1.9"
lexical-sort = "0.3"
reqwest = "0.11"
iced_futures = "0.4"
rab-core = "0.4"

[profile.release]
lto = true
